# subtask

./: .gitignore  Dockerfile.api.dev  Dockerfile.client.dev  README.md  config.example.toml  config.toml  dev.sh  docker-compose.debug.yml  pyproject.toml  requirements.txt
subtask_api/: __init__.py
subtask_api/connections/: __init__.py  base.py  github.py
subtask_api/controllers/: __init__.py  connection.py  files.py  project.py  user.py
subtask_api/models/: __init__.py  base.py  connection.py  grid_file.py  session.py  user.py
subtask_api/models/project_types/: __init__.py  project.py  task.py
subtask_api/utils/: __init__.py  config.py  context.py  cookie_session.py
subtask_client/: index.html  package.json  vite.config.ts
subtask_client/src/: App.tsx  main.tsx  routes.tsx
subtask_client/src/components/: VisibilityIcon.tsx
subtask_client/src/components/dropzone/: SubtaskDropzone.tsx  dropzone.scss
subtask_client/src/components/modals/projectCreate/: ProjectCreateModal.tsx  projectCreate.scss
subtask_client/src/components/projects/: PermissionIcon.tsx
subtask_client/src/lang/: en.json
subtask_client/src/util/: notifs.tsx
subtask_client/src/util/api/: ApiProvider.tsx  common.ts  index.ts
subtask_client/src/util/localize/: localize.tsx
subtask_client/src/util/themes/: common.ts  default.dark.ts
subtask_client/src/views/: redirection.tsx
subtask_client/src/views/authentication/: Auth.tsx  auth.scss
subtask_client/src/views/layout/: Layout.tsx  layout.scss
subtask_client/src/views/project/: ProjectView.tsx  project.scss
(+12 files in other folders)
